--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+	<section id="map"></section>
 	<script src="js/jQuery/jquery-3.3.1.min.js"></script>
 	<script src="js/KO/knockout-3.4.2.js"></script>
 	<script src="js/app.js"></script>
