--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Neighborhood Map</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Mina" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<section id="map"></section>
+	<header>
+		<nav class="navbar fixed-top navbar-dark bg-dark">
+			<div class="navbar-brand">
+				<a href="#" class="navbar-brand">
+					<i class="material-icons" data-bind="text: menu_Icon, click: toggleMenu"></i>
+				</a>
+				<h1 class="menu-title">Udacity Neighborhood Map</h1>
+			</div>
+		</nav>
+	</header>
+
+	<main>
+		<section id="map"></section>
+	</main>
+
 	<script src="js/jQuery/jquery-3.3.1.min.js"></script>
 	<script src="js/KO/knockout-3.4.2.js"></script>
 	<script src="js/app.js"></script>
