--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<aside data-bind="attr:{class: menu.menu_visibility}">
 
 		<div class="input-group">
-			<input type="search" class="filter-input form-control" placeholder="Search ...">
+			<input type="search" class="filter-input form-control" id="filter-input" placeholder="Search ...">
 			<span class="filter-btn">
 				<a href="#" class="navbar-brand">
 					<i class="material-icons">filter_list</i>
@@ -55,6 +55,7 @@
 	<script src="js/jQuery/jquery-3.3.1.min.js"></script>
 	<script src="js/KO/knockout-3.4.2.js"></script>
 	<script src="js/map-style.js"></script>
+	<script src="js/map-places.js"></script>
 	<script src="js/app.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-RKDbeGXYRdEb13dUoL9uAKLzlo2AHRE&v=3&callback=initMap"></script>
 </body>
