Use Unsplash API
Use Unsplash Api to show picture related to the place

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<a href="#" data-bind="click: $parent.menuItemOnClick.bind($data)">
 					<div class="list-item">
 						<i class="material-icons">location_on</i>
-						<span data-bind="text: $data">item</span>
+						<span data-bind="text: $data.title">item</span>
 					</div>
 				</a>
 			</li>
