Improve Filter Functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<aside data-bind="attr:{class: menu.menu_visibility}">
 
 		<div class="input-group">
-			<input type="search" data-bind="value: query" class="filter-input form-control" id="filter-input" placeholder="Search ...">
+			<input type="search" data-bind="textInput: query" class="filter-input form-control" id="filter-input" placeholder="Search ...">
 			<span class="filter-btn">
 				<a href="#" class="navbar-brand">
 					<i class="material-icons">filter_list</i>
