--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<script src="js/map-style.js"></script>
 	<script src="js/map-places.js"></script>
 	<script src="js/app.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-RKDbeGXYRdEb13dUoL9uAKLzlo2AHRE&v=3&callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-RKDbeGXYRdEb13dUoL9uAKLzlo2AHRE&v=3&callback=initMap" onerror="handleMapError()"></script>
 </body>
 
 </html>
