--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 	</header>
 
 	<aside data-bind="attr:{class: menu.menu_visibility}">
-
 		<div class="input-group">
 			<input type="search" data-bind="textInput: query" class="filter-input form-control" id="filter-input" placeholder="Search ...">
 			<span class="filter-btn">
@@ -57,7 +56,8 @@
 	<script src="js/map-style.js"></script>
 	<script src="js/map-places.js"></script>
 	<script src="js/app.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-RKDbeGXYRdEb13dUoL9uAKLzlo2AHRE&v=3&callback=initMap" onerror="handleMapError()"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-RKDbeGXYRdEb13dUoL9uAKLzlo2AHRE&v=3&callback=initMap"
+	    onerror="handleMapError()"></script>
 </body>
 
 </html>
